[tool.poetry]
name = "llama-trial"
version = "0.1.0"
description = ""
authors = ["seiichiinoue <d35inou108@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
replicate = "^0.15.4"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
